<resources>
    <string name="app_name">MyApp</string>
    <string name="arrowback">arrowback</string>
    <string name="event_house_name_no">Event House Name/No.</string>
    <string name="area_name">Area Name</string>
    <string name="town">Town</string>
    <string name="save">Save</string>
    <string name="extra_details">Extra Details</string>
    <string name="skip">Skip</string>
    <string name="choose_a_service">Choose a service</string>
    <string name="service_type_1">Event House</string>
    <string name="service_type_3">Caterer</string>
    <string name="service_type_2">Photographer</string>
    <string name="service">service</string>
    <string name="choose_an_event">Choose an Event</string>
    <string name="go">GO</string>
    <string name="event">EVENT</string>
    <string name="event_type">Event Type</string>
    <string name="_1123_people_wishtedlisted">1123 people wishtedlisted</string>
    <string name="panama_beach_coral_avenue">Panama Beach Coral Avenue</string>
    <string name="extra_charges_apply_on_distance_above_28km">Extra charges apply on distance above 28km</string>
    <string name="starting_from">Starting From</string>
    <string name="service_4">Service 4</string>
    <string name="destination_address">Destination Address</string>
    <string name="your_preffered_budget">Your Preffered Budget</string>
    <string name="kolkata_westbengal_delhi_fara">kolkata,westbengal,delhi,fara</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string name="or">OR</string>
    <string name="enter_amount_manually">Enter Amount Manually...</string>
    <string name="others">Others</string>
    <string name="star_rating">Star Rating</string>
    <string name="marriage">Marriage</string>
    <string name="birthday">Birthday</string>
    <string name="anivarsary">Anivarsary</string>
    <string name="corporate_event">Corporate EVent</string>
    <string name="other">Other</string>
    <string name="name_of_the_event">Name of the event</string>
    <string name="workshop_gallery">Workshop Gallery</string>
    <string name="event_tag">Event</string>
    <string name="set_dates">Set Dates</string>
    <string name="todo">TODO</string>
    <string name="apply">Apply</string>
    <string name="item_1">item 1</string>
    <string name="_23_jan_2018">jan 23 2018</string>
    <string name="festive_calender">Festive Calender</string>
    <string name="jan_26_2018">Jan 26 2018</string>
    <string name="event_house">Event House</string>
    <string name="total_payment">Total Payment</string>
    <string name="_3600">\u20B9 3600</string>
    <string name="paid">Paid</string>
    <string name="rate_now">Rate Now</string>
    <string name="boking_details">Boking Details</string>
    <string name="_23_000">23,000</string>
    <string name="paid_am">PAID</string>
    <string name="organo_mentor">Organo Mentor</string>
    <string name="carret_street_kolkata_700107_west_bengal">carret street,kolkata-700107,west-bengal</string>
    <string name="price_breakup">Price Breakup</string>
    <string name="_36_000">36,000</string>
    <string name="wednesday">Wednesday</string>
    <string name="_23_jan_2018a">23 Jan, 2018</string>
    <string name="_17_000"> 17,000</string>
    <string name="Rs">\u20B9</string>
    <string name="account">Account</string>
    <string name="bills">Bills</string>
    <string name="profile">Profile</string>
    <string name="be_our_partner">Be Our Partner</string>
    <string name="help">Help</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="vender_name">Vendor Name</string>
    <string name="booked_for_5_days">Booked For 5 Days</string>
    <string name="funeral">Funeral</string>
    <string name="book_again">Book Again</string>
    <string name="_50_000">50,000</string>
    <string name="event_small">Event</string>
    <string name="mr">Mr.</string>
    <string name="pritam_roy">Pritam Roy</string>
    <string name="package_details">Package Details</string>
    <string name="total_bill">Total Bill</string>
    <string name="due_amount">Due Amount</string>
    <string name="_23_999">23,999</string>
    <string name="pay_now">Pay Now</string>
    <string name="paid_caps">PAID</string>
    <string name="do_you_have_any_query">Do you have any query</string>
    <string name="send_caps">SEND</string>
    <string name="lorem_ipsum_is_simply_dummy_text_of_the_printing_n_and_typesetting_industry_lorem_ipsum_has_been_the_n_industry_s_standard_dummy_text_ever_since_the_1500s_n_whne_an_unknown_printer_took_a_gallery_of_type_and_n_scrambled_it_to_make_a_type_specimen_book">Lorem Ipsum is simply dummy text of the printing  and typesetting industry. lorem ipsum has been the  industry\'s standard dummy text ever since the 1500s,  whne an unknown printer took a gallery of type and  scrambled it to make a type specimen book.</string>
    <string name="step_1">Step 1</string>
    <string name="owner_s_name">Owner\'s Name</string>
    <string name="your_name">your name</string>
    <string name="company_name">Company Name</string>
    <string name="company_address">Company Address</string>
    <string name="city">City</string>
    <string name="pin">Pin</string>
    <string name="state">State</string>
    <string name="landmark">Landmark</string>
    <string name="submit">Submit</string>
    <string name="next">Next</string>
    <string name="total_employee_in_number">Total Employee(In Number)</string>
    <string name="year_of_experiance">Year Of Experiance</string>
    <string name="years_in_number">years(in number)</string>
    <string name="months_in_number">months(in number)</string>
    <string name="step_2">Step 2</string>
    <string name="maximum_no_of_boking_in_a_day">Maximum No. Of Boking In A Day</string>
    <string name="maximum_bking_in_a_day">maximum bking in a day</string>
    <string name="equipment_used">Equipment Used</string>
    <string name="equipment_name">equipment name</string>
    <string name="price_for_rent">price for rent</string>
    <string name="add_more">+ Add More</string>
    <string name="event_you_cover">Event You Cover</string>
    <string name="event_name">Event Name</string>
    <string name="add_event">+ Add Event</string>
    <string name="write_unlimited_or_distance_in_km">write unlimited or distance(in km)</string>
    <string name="maximum_distance_you_cover_without_extra_charge">Maximum Distance You Cover Without Extra Charge</string>
    <string name="you_can_write_unlimited_if_you_dont_have_any_n_boundationof_distance_or_you_can_put_distance_in_km">(you can write unlimited if you dont have any   boundationof distance or you can put distance in km)</string>
    <string name="create_packages">Create Packages</string>
    <string name="starting_price">Starting Price</string>
    <string name="_16000">16000</string>
    <string name="_20000">20000</string>
    <string name="_10">10%</string>
    <string name="off">Off</string>

</resources>
