<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_marginStart="1dp"
    android:layout_marginTop="1dp"
    android:layout_marginEnd="1dp"
    android:layout_marginBottom="15dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="15dp">
        <RelativeLayout
            android:id="@+id/item_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <TextView
            android:id="@+id/vendor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vender_name"
            android:textColor="#000000"
            android:textSize="22sp"
            android:fontFamily="@font/quicksand_bold"
            tools:ignore="RelativeOverlap" />
        <ImageView
            android:id="@+id/greaterthan"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="2dp"
            android:src="@drawable/ic_keyboard_arrow_right_black_24dp"
            android:layout_alignParentEnd="true"
            android:contentDescription="@string/todo" />
        <TextView
            android:id="@+id/booked_days"
            android:layout_below="@+id/vendor_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/booked_for_5_days"
            android:textSize="15sp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/event_t"
            android:layout_below="@+id/booked_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/funeral"
            android:layout_marginTop="45dp"
            android:textColor="#000000"
            android:textSize="18sp"
            />
      <TextView
          android:layout_below="@+id/greaterthan"
          android:layout_toStartOf="@+id/amount"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:text="@string/Rs"
          android:textSize="25sp"
          android:textColor="@color/red"
          android:layout_marginTop="60dp"
          android:layout_marginEnd="5dp"/>
        <TextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_50_000"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/greaterthan"
            android:textColor="@color/red"
            android:textSize="25sp"
            android:layout_marginTop="60dp"/>
        <View
            android:id="@+id/view"
            android:layout_below="@+id/amount"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black"
            android:layout_marginTop="10dp"
            />
        </RelativeLayout>
        <TextView
            android:id="@+id/book_again"
            android:layout_below="@+id/item_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_again"
            android:textSize="18sp"
            android:textColor="@color/green"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"/>
    </RelativeLayout>



</android.support.v7.widget.CardView>