<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="370dp"
    android:layout_height="wrap_content"
    android:padding="10dp"
    >

        <TextView
            android:id="@+id/marriage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/marriage"
            android:textSize="23sp"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#000000"
            android:layout_marginTop="15dp"
            android:layout_marginStart="20dp"
            />
        <TextView
            android:id="@+id/birthday"
            android:layout_below="@+id/marriage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday"
            android:textColor="#000000"
            android:textSize="23sp"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/quicksand_bold"/>
        <TextView
            android:id="@+id/aniversary"
            android:layout_below="@+id/birthday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/anivarsary"
            android:layout_marginStart="20dp"
            android:textSize="23sp"
            android:textColor="#000000"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginTop="20dp"
            />
        <TextView
            android:id="@+id/corporate_event"
            android:layout_below="@+id/aniversary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="#000000"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/corporate_event"/>
        <TextView
            android:id="@+id/other"
            android:layout_below="@+id/corporate_event"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="23sp"
            android:textColor="#000000"
            android:fontFamily="@font/quicksand_bold"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:text="@string/other"/>
        <EditText
            android:id="@+id/name_change"
            android:layout_below="@+id/other"
            android:layout_width="350dp"
            android:layout_height="55dp"
            android:layout_marginTop="5dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/edittextback"
            android:hint="@string/name_of_the_event"
            android:paddingStart="10dp"
            android:paddingEnd="0dp"
            android:singleLine="true"
            android:layout_marginBottom="20dp"
            />


</RelativeLayout>