<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/backarrow"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:src="@drawable/ic_arrow_back_black_24dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:contentDescription="@string/arrowback" />
    <LinearLayout
        android:layout_below="@+id/backarrow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:orientation="vertical">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/eventhouse"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/event_house_name_no"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:layout_gravity="center_horizontal">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/areaname"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/area_name"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="15dp"

            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/city"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/city"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/town"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/town"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:weightSum="2"
            android:layout_marginTop="15dp"

            >
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/state"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/state"/>
            </android.support.design.widget.TextInputLayout>
            <android.support.design.widget.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1">
                <android.support.design.widget.TextInputEditText
                    android:id="@+id/pin"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/pin"/>
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp">
            <android.support.design.widget.TextInputEditText
                android:id="@+id/landmark"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/landmark"/>
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/save"
            android:layout_width="130dp"
            android:layout_height="50dp"
            android:text="@string/save"
            android:textColor="#ffffff"
            android:textStyle="bold"
            android:textSize="20sp"
            android:background="@drawable/buttonsave"
            android:layout_marginTop="30dp"/>

    </LinearLayout>

</RelativeLayout>