<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="1dp"
        android:layout_marginTop="1dp"
        android:layout_marginBottom="15dp">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:orientation="vertical">
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_arrow_forward_black_24dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/starting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/starting_price"
                android:textSize="20sp"
                android:textColor="#000000"
                android:fontFamily="@font/quicksand_bold"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                tools:ignore="RelativeOverlap" />
            <LinearLayout
                android:layout_below="@+id/starting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="15dp"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textSize="25sp"
                    android:textColor="@color/red"/>
                <TextView
                    android:id="@+id/price_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_16000"
                    android:textSize="25sp"
                    android:textColor="@color/red"
                    android:layout_marginStart="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Rs"
                    android:textSize="18sp"
                    android:layout_marginStart="15dp"
                    android:textColor="#000000"
                    />
                <TextView
                    android:id="@+id/original_price"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_20000"
                    android:textSize="18sp"
                    android:layout_marginStart="5dp"
                    android:textColor="#000000"
                    />
                <TextView
                    android:id="@+id/discount_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10"
                    android:layout_marginStart="15dp"
                    android:textSize="18sp"
                    android:textColor="@color/green"
                    />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/off"
                    android:layout_marginStart="3dp"
                    android:textSize="18sp"
                    android:textColor="@color/green"/>

            </LinearLayout>

        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>