<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <android.support.v7.widget.CardView
        android:id="@+id/tab_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="60dp">
        <ImageView
            android:id="@+id/back_key"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:src="@drawable/ic_arrow_back_black_24dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/todo" />
        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toEndOf="@+id/back_key"
            android:layout_marginStart="15dp"
            >
            <TextView
                android:id="@+id/Service4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_4"
                android:textSize="20sp"
                android:textStyle="bold"
                android:textColor="#000000"/>
            <TextView
                android:layout_below="@+id/Service4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/event_small"
                android:textColor="@color/red"
                android:textSize="18sp"
                />
        </RelativeLayout>

    </RelativeLayout>
    </android.support.v7.widget.CardView>
    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tab_card">

    <RelativeLayout
        android:id="@+id/rel_1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="10dp">
        <TextView
            android:id="@+id/mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mr"
            android:textSize="23sp"
            android:textColor="#000000"
            android:fontFamily="@font/quicksand_bold"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pritam_roy"
            android:layout_toEndOf="@+id/mr"
            android:textSize="23sp"
            android:layout_marginStart="5dp"
            android:fontFamily="@font/quicksand_bold"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/details_package"
            android:layout_below="@+id/mr"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/package_details"
            android:textSize="23sp"
            android:textColor="#000000"
            android:layout_marginTop="45dp"/>
        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycle_item"
            android:layout_below="@+id/details_package"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </android.support.v7.widget.RecyclerView>
        <View
            android:id="@+id/view_1"
            android:layout_below="@+id/recycle_item"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/light_black"
            android:layout_marginTop="7dp"/>
        <TextView
            android:id="@+id/total_bill"
            android:layout_below="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_bill"
            android:textSize="20sp"
            android:textColor="#000000"
            android:layout_marginTop="5dp"/>
        <TextView
            android:id="@+id/total_amount"
            android:layout_below="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="17,999"
            android:textSize="20sp"
            android:layout_alignParentEnd="true"
            android:textColor="#000000"
            android:layout_marginTop="5dp"
            />
        <TextView
            android:layout_below="@+id/view_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rs"
            android:layout_toStartOf="@+id/total_amount"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:textSize="20sp"
            android:textColor="#000000"
            />
        <TextView
            android:id="@+id/due_amount"
            android:layout_below="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/due_amount"
            android:textSize="25sp"
            android:textColor="@color/red"
            android:layout_marginTop="40dp"
            />
        <TextView
            android:id="@+id/rs"
            android:layout_below="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Rs"
            android:textSize="25sp"
            android:layout_toEndOf="@+id/due_amount"
            android:layout_marginTop="40dp"
            android:layout_marginStart="10dp"
            android:textColor="@color/red"
            />
        <TextView
            android:layout_below="@+id/total_bill"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_23_999"
            android:textSize="25sp"
            android:layout_toEndOf="@+id/rs"
            android:layout_marginTop="40dp"
            android:layout_marginStart="5dp"
            android:textColor="@color/red"/>
        <android.support.v7.widget.CardView
            android:id="@+id/rel_2"
            android:layout_below="@+id/due_amount"
            android:layout_marginTop="15dp"
            android:layout_marginStart="1dp"
            android:layout_marginEnd="1dp"
            android:layout_marginBottom="1dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:cardCornerRadius="5dp">
          <RelativeLayout
              android:layout_width="110dp"
              android:layout_height="40dp"
              >
              <TextView
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/pay_now"
                  android:layout_centerInParent="true"
                  android:textSize="20sp"
                  android:textColor="#000000"/>
          </RelativeLayout>
        </android.support.v7.widget.CardView>
        <TextView
            android:layout_below="@+id/rel_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/paid_caps"
            android:textSize="40sp"
            android:layout_marginTop="20dp"
            android:textColor="@color/green"
            android:fontFamily="@font/quicksand_bold"
            android:layout_centerHorizontal="true"/>

    </RelativeLayout>
    </ScrollView>


</RelativeLayout>